FullQa New/src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Address__c</fullName>
        <defaultValue>&quot;sara.simrell@avalara.com&quot;</defaultValue>
        <label>Notification Email Address</label>
        <type>Email</type>
    </fields>
    <label>Partner Launch User Requests</label>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>